@@ -95,6 +95,26 @@ namespace tgui
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Changes the text style of the default text (the text drawn when no item is selected)
+        ///
+        /// @param style  The new default text style
+        ///
+        /// @code
+        /// comboBox->getSharedRenderer()->setDefaultTextStyle(sf::Text::Italic | sf::Text::Bold);
+        /// @endcode
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        void setDefaultTextStyle(TextStyle style);
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Returns the text style of the default text (the text drawn when no item is selected)
+        ///
+        /// @return Style of the default text
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        TextStyle getDefaultTextStyle() const;
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         /// @brief Changes the background color of the combo box
         ///
         /// @param backgroundColor  The new background color
@@ -128,6 +148,22 @@ namespace tgui
         ///
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         Color getTextColor() const;
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Sets the color of the default text that can optionally be displayed when no item is selected
+        ///
+        /// @param defaultTextColor  The new default text color
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        void setDefaultTextColor(Color defaultTextColor);
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Returns the color of the default text that can optionally be displayed when no item is selected
+        ///
+        /// @return Default text color
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        Color getDefaultTextColor() const;
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
