@@ -456,6 +456,22 @@ namespace tgui
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Changes the default text of the combo box. This is the text drawn when no item is selected.
+        ///
+        /// @param defaultText  The new default text
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        void setDefaultText(const sf::String& defaultText);
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Returns the default text of the combo box. This is the text drawn when no item is selected.
+        ///
+        /// @return The default text of the combo box
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        const sf::String& getDefaultText() const;
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         /// @brief Changes the side where the list is displayed
         /// @param direction  On which side of the combo box should the list be displayed?
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -612,6 +628,7 @@ namespace tgui
         ListBox::Ptr m_listBox = ListBox::create();
 
         Text m_text;
+        Text m_defaultText;
 
 #ifdef TGUI_NEXT
         ExpandDirection m_expandDirection = ExpandDirection::Automatic;
